map65/commons.h

  extern int manualDecodeFlag ;
  double get_fcenter();
  void get_mycall(char*);
  void get_hiscall(char*);
  void get_mygrid(char*);
  void get_hisgrid(char*);
  void get_datetime(char*);
  int get_manual_decode_flag();
  int get_nutc();
  int get_ndop00();
  int get_nkeep();
  int get_idphi();
  int get_mousedf();
  int get_mousefqso();
  int get_nagain();
  int get_ndepth();
  int get_ndiskdat();
  int get_neme();
  int get_newdat();
  int get_nfa();
  int get_nfb();
  int get_map65RxLog();
 
  void set_stop_m65(int val);
  void set_decoder_ready(int val);
  void set_wsjtx_dir_(const char* path, int path_len);
  void set_manual_decode_flag(int);